hphp/hack/test/typecheck/explicit_type_collection/explicit_type_collection_passing_map3.php.exp
File "explicit_type_collection_passing_map3.php", line 6, characters 3-13:
  Map<arraykey, bool>
File "explicit_type_collection_passing_map3.php", line 7, characters 10-11:
Invalid argument (Typing[4110])
  File "explicit_type_collection_passing_map3.php", line 3, characters 21-26:
  Expected `string`
  File "explicit_type_collection_passing_map3.php", line 3, characters 21-26:
  This type argument to `Map` must match exactly (it is invariant)
  File "explicit_type_collection_passing_map3.php", line 5, characters 8-52:
  But got `arraykey` because type parameter `Tk` of `HH\Map` could not be determined. Please add explicit type parameters to the invocation of `HH\Map`
